<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_materi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_materi"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:contentDescription="@string/img_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/example"
            card_view:layout_constraintBottom_toTopOf="@+id/desc_materi"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/desc_materi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            card_view:layout_constraintTop_toBottomOf="@+id/img_materi"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/tv_title_materi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                tools:text="@string/title_materi"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_status_materi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                tools:text="@string/status_materi"
                android:textSize="12sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_level_materi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="4dp"
                    android:text="@string/level_materi"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    card_view:drawableStartCompat="@drawable/baseline_bar_chart_16"
                    card_view:drawableTint="@color/neutral_400" />

                <TextView
                    android:id="@+id/tv_chapters_materi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="4dp"
                    android:textAlignment="textEnd"
                    android:gravity="center_vertical"
                    android:text="@string/chapters_materi"
                    android:textSize="12sp"
                    card_view:drawableEndCompat="@drawable/baseline_library_books_16"
                    card_view:drawableTint="@color/neutral_400"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>