<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/purple_200"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:layout_margin="30dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_register"
                android:id="@+id/tvRegister"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:fontFamily="sans-serif-medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/custom_edit"
                android:layout_marginTop="40dp"
                android:padding="12dp"
                android:hint="Username"
                android:drawableLeft="@drawable/baseline_account_circle_24"
                android:drawableTint="@color/purple_700"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:background="@drawable/custom_edit"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:hint="Password"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawableTint="@color/purple_700"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegister"
                android:text="@string/text_register"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/purple_700"
                app:cornerRadius = "20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_already_have_account"
                    android:textColor="?attr/colorPrimary" />
                <TextView
                    android:id="@+id/toLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/text_login"
                    android:textColor="#FF5858" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>